<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="INDEXING_1_VAR" Id="{b29c605e-88f4-4c15-a915-7e775b54d755}">
    <Declaration><![CDATA[{attribute 'qualified_CLOSEly'}
VAR_GLOBAL
	
I_INDEXING_1_GRIPPER_CLOSE_1 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_CLOSE_2 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_CLOSE_3 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_CLOSE_4 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_OPEN_1 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_OPEN_2 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_OPEN_3 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_OPEN_4 AT %I* : BOOL;
I_INDEXING_1_GRIPPER_EXT_UP AT %I* : BOOL;
I_INDEXING_1_GRIPPER_EXT_DOWN AT %I* : BOOL;

O_INDEXING_1_GRIPPER_EXT_UP AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_EXT_DOWN AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_CLOSE_1 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_CLOSE_2 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_CLOSE_3 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_CLOSE_4 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_OPEN_1 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_OPEN_2 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_OPEN_3 AT %Q* : BOOL;
O_INDEXING_1_GRIPPER_OPEN_4 AT %Q* : BOOL;

I_PRESS_STOPPER_DOWN AT %I* : BOOL;
I_PRESS_STOPPER_UP AT %I* : BOOL;

O_PRESS_STOPPER_DOWN AT %Q* : BOOL;
O_PRESS_STOPPER_UP AT %Q* : BOOL;

O_INDEXING_1_HOME   : BOOL;
O_ROTATION_START : BOOL;
O_ROTATION_STOP : BOOL;

I_INDEXING_1_READY_FOR_STRAIGHTEN: BOOL;
I_INDEXING_1_HOME : BOOL;
O_INDEXING_1_POWER_OFF AT %Q* : BOOL;

I_INDEXING_1_ROTATION_START: BOOL;
I_INDEXING_1_ROTATION_PROCESS: BOOL;
I_INDEXING_1_ROTATION_DONE: BOOL ;

I_ALL_GRIPPER_OPEN: BOOL;
NUMBER_OF_STRAIGHTEN: INT :=0;
INDEXING_1_CASE: INT ;
TOTALNUMBER_OF_STRAIGHTEN :INT :=1;
STRAIGHTEN_FINISH:BOOL;
READY_STRAIGTHEN: BOOL;

DataByteOutput AT%Q* : ARRAY[0..7] OF BYTE;
DataByteInput AT%I* : ARRAY[0..7] OF BYTE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>