<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="SORTER_RS4_VAR" Id="{9093d4e3-af10-403a-ab77-64673af481fe}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

SORTER_RS4_INPUT AT %IB64 : BYTE;  
SORTER_RS4_INPUT_1 AT %IB65 : BYTE; 
SORTER_RS4_INPUT_2 AT %IB66 : BYTE;  
SORTER_RS4_INPUT_3 AT %IB67 : BYTE; 
SORTER_RS4_INPUT_4 AT %IB68 : BYTE; 
SORTER_RS4_INPUT_5 AT %IB69 : BYTE; 
SORTER_RS4_INPUT_6 AT %IB70 : BYTE; 

SORTER_RS4_OUTPUT AT %QB64 : BYTE; 
SORTER_RS4_OUTPUT_1 AT %QB65 : BYTE; 
SORTER_RS4_POS_TAKEUP_1 AT %QB66 : BYTE:=1; 
SORTER_RS4_POS_TAKEUP_2 AT %QB67 : BYTE:=2;
SORTER_RS4_POS_TAKEUP_3 AT %QB68 : BYTE:=3; 
SORTER_RS4_POS_TAKEUP_4 AT %QB69 : BYTE:=4;
SORTER_RS4_POS_PLACING_1 AT %QB70 : BYTE:=1; 
SORTER_RS4_POS_PLACING_2 AT %QB71 : BYTE:=5;
SORTER_RS4_POS_PLACING_3 AT %QB72 : BYTE:=9; 
SORTER_RS4_POS_PLACING_4 AT %QB73 : BYTE:=9; 
I_SORTER_RS4_READY_TAKEUP  AT %IX67.2 :BOOL;//CYCLE RUNNING INDICATOR
I_SORTER_RS4_START_TAKEUP  AT %IX67.3 :BOOL;
I_SORTER_RS4_READY_PLACING  AT %IX67.4 :BOOL;
I_SORTER_RS4_START_PLACING  AT %IX67.5 :BOOL;
O_SORTER_RS4_CONTINUE AT %QX64.6  : BOOL;
I_SORTER_RS4_HANG :BOOL;
I_SORTER_RS4_END_CARRIER :BOOL:=true;
I_SORTER_RS4_ENABLE :BOOL; 
I_SORTER_RS4_DISABLE :BOOL;

SORTER_RS4_OUTPUT_10 AT %QB74 : BYTE;

I_SORTER_RS4_READY  AT %IX64.0 :BOOL;
I_SORTER_RS4_RUNNING  AT %IX64.1 :BOOL;
I_SORTER_RS4_PAUSED  AT %IX64.2 :BOOL;
I_SORTER_RS4_ERROR  AT %IX64.3 :BOOL;
I_SORTER_RS4_ESTOPON  AT %IX64.4 :BOOL;
I_SORTER_RS46_SAFEGUARDON  AT %IX64.5 :BOOL;
I_SORTER_RS4_SERROR  AT %IX64.6 :BOOL;
I_SORTER_RS4_WARNING  AT %IX64.7 :BOOL;

I_SORTER_RS4_MOTORON  AT %IX65.0 :BOOL;
I_SORTER_RS4_ATHOME  AT %IX65.1 :BOOL;
I_SORTER_RS4_AUTOMODE  AT %IX65.5 :BOOL;

IX_SORTER_RS4_GRIPPER_1 AT %IX66.0 : BOOL;
IX_SORTER_RS4_GRIPPER_2 AT %IX66.1 : BOOL;
IX_SORTER_RS4_GRIPPER_3 AT %IX66.2 : BOOL;
IX_SORTER_RS4_GRIPPER_4 AT %IX66.3 : BOOL;

IX_SORTER_RS4_GRIPPER_EXT_1 AT %IX66.4 : BOOL;
IX_SORTER_RS4_GRIPPER_EXT_2 AT %IX66.5 : BOOL;
IX_SORTER_RS4_GRIPPER_EXT_3 AT %IX66.6 : BOOL;
IX_SORTER_RS4_GRIPPER_EXT_4 AT %IX66.7 : BOOL;

I_SORTER_RS4_END_CYCLE  AT %IX67.0 :BOOL;
//I_SORTER_RS4_END_CARRIER  AT %IX69.1 :BOOL;
	
	O_SORTER_RS4_START AT %QX64.0  : BOOL;	
	O_SORTER_RS4_SELECT_FUKUDA_A AT %QX64.1  : BOOL;
	O_SORTER_RS4_SELECT_FUKUDA_B AT %QX64.2  : BOOL;
	O_SORTER_RS4_STOP AT %QX64.4  : BOOL;
	O_SORTER_RS4_PAUSE AT %QX64.5  : BOOL;
	O_SORTER_RS4_RESET AT %QX64.7  : BOOL;	
	
	O_SORTER_RS4_SETMOTORON AT %QX65.0  : BOOL;
	O_SORTER_RS4_SETMOTOROFF AT %QX65.1  : BOOL;
	O_SORTER_RS4_HOME AT %QX65.2  : BOOL;

I_SORTER_RS4_GRIPPER_CLOSE_1 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_CLOSE_2 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_CLOSE_3 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_CLOSE_4 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_OPEN_1 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_OPEN_2 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_OPEN_3 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_OPEN_4 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_DOWN_1 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_DOWN_2 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_DOWN_3 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_DOWN_4 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_UP_1 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_UP_2 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_UP_3 AT %I* : BOOL;
I_SORTER_RS4_GRIPPER_EXT_UP_4 AT %I* : BOOL;

O_SORTER_RS4_GRIPPER_CLOSE_1 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_CLOSE_2 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_CLOSE_3 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_CLOSE_4 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_OPEN_1 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_OPEN_2 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_OPEN_3 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_OPEN_4 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_DOWN_1 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_DOWN_2 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_DOWN_3 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_DOWN_4 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_UP_1 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_UP_2 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_UP_3 AT %Q* : BOOL;
O_SORTER_RS4_GRIPPER_EXT_UP_4 AT %Q* : BOOL;

IX_SORTER_RS4_HOME AT %I* : BOOL;
IX_SORTER_RS4_RUNNING AT %I* : BOOL;
IX_SORTER_RS4_PICKUP_1 AT %I* : BOOL;
IX_SORTER_RS4_PICKUP_2 AT %I* : BOOL;
IX_SORTER_RS4_PICKUP_3 AT %I* : BOOL;
IX_SORTER_RS4_PICKUP_4 AT %I* : BOOL;
IX_SORTER_RS4_PLACING_1 AT %I* : BOOL;
IX_SORTER_RS4_PLACING_2 AT %I* : BOOL;
IX_SORTER_RS4_PLACING_3 AT %I* : BOOL;
IX_SORTER_RS4_PLACING_4 AT %I* : BOOL;

IX_SORTER_RS4_FINISH AT %I* : BOOL;
READY_INDEXING :BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>