<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="LOADER_RS4" Id="{c98cbcef-c336-4bfc-8790-c7542f749e6f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM LOADER_RS4
VAR

	TMR10: TON;
	TMR8: TON;
	TMR9: TON;
	TMR7: TON;
	TMR3: TON;
	TMR_ERROR: TON;
	RES_POS: TON;
	TMR1: TON;
	TMR2: TON;
	
	POSITION_CHANGED: BOOL;
	RESET_POSITION: BOOL;
	GO_ROBOT: BOOL;
	VAL: INT;
	I: INT;
	
	TP_COUNT: R_TRIG;
	ROT_START:R_TRIG;
	START_ROTATE: R_TRIG;
	
	CNT_INC: CTU;
	CNT_PLACING: CTU;
	CNT_CYCLE: CTU;

	PT: TP;
	TP_CNT_PLACING: TP;
	GRP1: TP;
	GRP2: TP;
	GRP3: TP;
	GRP4: TP;
	START_MOVE: TP;
	TP2: TP;
	START_ROBOT: TP;

	TMR4: TON;
	POSITION_TOOL_ACC: BYTE;
	RDYPLCG: R_TRIG;
	TRGEN: R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF LOADER_RS4_VAR.I_LOADER_RS4_ENABLE THEN
	LOADER_RS4_VAR.FINISH_POSITION_TOOL:=63;
	
	IF LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP THEN
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_1:=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1:=TRUE;
	
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_2:=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2:=TRUE;
	
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_3:=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3:=TRUE;
	
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_4:=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4:=TRUE;
	END_IF
//GRIPPER SENSOR
LOADER_RS4_VAR.GRP_SENS_OPEN_1 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_OPEN_1;
LOADER_RS4_VAR.GRP_SENS_CLOSE_1 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_CLOSE_1;

LOADER_RS4_VAR.GRP_SENS_OPEN_2 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_OPEN_2;
LOADER_RS4_VAR.GRP_SENS_CLOSE_2 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_CLOSE_2;

LOADER_RS4_VAR.GRP_SENS_OPEN_3 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_OPEN_3;
LOADER_RS4_VAR.GRP_SENS_CLOSE_3 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_CLOSE_3;

LOADER_RS4_VAR.GRP_SENS_OPEN_4 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_OPEN_4;
LOADER_RS4_VAR.GRP_SENS_CLOSE_4 :=LOADER_RS4_VAR.I_LOADER_RS4_GRIPPER_CLOSE_4;

//GRIPPER CONTROL
IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_1 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_1:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_1:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1:=TRUE;
//CHECK END CARRIER
	IF LOADER_RS4_VAR.POSITION_TOOL_1 = LOADER_RS4_VAR.FINISH_POSITION_TOOL THEN
		LOADER_RS4_VAR.O_END_CARRIER :=TRUE;
	END_IF
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_2 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_2:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_2:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2:=TRUE;
	IF LOADER_RS4_VAR.POSITION_TOOL_2 = LOADER_RS4_VAR.FINISH_POSITION_TOOL THEN
		LOADER_RS4_VAR.O_END_CARRIER :=TRUE;
	END_IF
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_3 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_3:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_3:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3:=TRUE;
	IF LOADER_RS4_VAR.POSITION_TOOL_3 = LOADER_RS4_VAR.FINISH_POSITION_TOOL THEN
		LOADER_RS4_VAR.O_END_CARRIER :=TRUE;
	END_IF
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_4 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_4:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_4:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4:=TRUE;
	IF LOADER_RS4_VAR.POSITION_TOOL_4 = LOADER_RS4_VAR.FINISH_POSITION_TOOL THEN
		LOADER_RS4_VAR.O_END_CARRIER :=TRUE;
	END_IF
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_1 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_1:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_1:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_1:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_1:=TRUE;
END_IF

//GRIPPER EXTENDER CONTROL
IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_2 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_2:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_2:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_2:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_2:=TRUE;
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_3 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_3:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_3:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_3:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_3:=TRUE;
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_4 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_4:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_4:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_4:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_4:=TRUE;
END_IF
 (*TRGEN(CLK:=LOADER_RS4_VAR.I_LOADER_RS4_ENABLE);
IF TRGEN.Q THEN
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[0]:=0;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1]:=1;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[2]:=2;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[3]:=3;
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[4]:=4;
END_IF
IF LOADER_RS4_VAR.I_LOADER_RS4_ENABLE THEN
POSITION_TOOL_ACC:=	LOADER_RS4_VAR.POSITION_TOOL_1+
					LOADER_RS4_VAR.POSITION_TOOL_2+
					LOADER_RS4_VAR.POSITION_TOOL_3+
					LOADER_RS4_VAR.POSITION_TOOL_4;
IF INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1] <=64 THEN
RDYPLCG(CLK:=LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP);
IF 	RDYPLCG.Q THEN
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[0]:=0;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1]:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1]+4;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[2]:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[2]+4;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[3]:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[3]+4;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[4]:=INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[4]+4;
END_IF
ELSE
	INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[0]:=0;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[1]:=1;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[2]:=2;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[3]:=3;
		INPUT_VAR.I_LOADING_SOCKET.AVAILABLE_SOCKET[4]:=4;
END_IF
*)
CARRIER_INDEX:=INDEXING_2_VAR.CARRIER_INDEX;
 IF NOT LOADER_RS4_VAR.I_LOADER_RS4_MOTORON THEN
	 LOADER_RS4_VAR.O_LOADER_RS4_STOP:=FALSE;
 END_IF

//TURN ON MOTOR ROBOT
	LOADER_RS4_VAR.O_LOADER_RS4_SETMOTOROFF:=FALSE;
	IF NOT LOADER_RS4_VAR.I_LOADER_RS4_MOTORON AND LOADER_RS4_VAR.I_LOADER_RS4_READY AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ESTOPON AND NOT LOADER_RS4_VAR.I_LOADER_RS4_SAFEGUARDON  THEN
		LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON:=TRUE;
		LOADER_RS4_VAR.O_LOADER_RS4_RESET :=FALSE;	
		LOADER_RS4_VAR.O_LOADER_RS4_STOP :=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_START :=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=FALSE;
	ELSE
		LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON:=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_SETMOTOROFF:=FALSE;
	END_IF

//EROOR OVERRIDE
	IF LOADER_RS4_VAR.I_LOADER_RS4_ERROR THEN
		LOADER_RS4_VAR.O_LOADER_RS4_STOP:=TRUE;
		LOADER_RS4_VAR.O_LOADER_RS4_START :=FALSE;
		LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=FALSE;
		TMR10(IN:=LOADER_RS4_VAR.I_LOADER_RS4_ERROR,PT:=T#1S);
		INPUT_VAR.ALARM1:=LOADER_RS4_VAR.I_LOADER_RS4_ERROR;
		IF TMR10.Q AND LOADER_RS4_VAR.I_LOADER_RS4_READY THEN
			LOADER_RS4_VAR.O_LOADER_RS4_RESET :=TRUE;
		END_IF
	ELSE
		TMR10(IN:=FALSE);
		LOADER_RS4_VAR.O_LOADER_RS4_RESET :=FALSE;
	END_IF 
	IF LOADER_RS4_VAR.I_LOADER_RS4_MOTORON AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_HOME AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE AND INDEXING_2_VAR.I_INDEXING_2_HOME THEN //AND LOADER_VAR.I_CARRIER_DETECT_1 THEN
		IF (LOADER_RS4_VAR.I_LOADER_RS4_READY OR LOADER_RS4_VAR.I_LOADER_RS4_RUNNING) AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ERROR  AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ESTOPON AND NOT LOADER_RS4_VAR.I_LOADER_RS4_SAFEGUARDON THEN//AND POSITION_TOOL_ACC >0THEN
			TMR8(IN:=INPUT_G6_VAR.O_G6_SELECT_FUKUDA_A,PT:=T#5S);
			TMR9(IN:=INPUT_G6_VAR.O_G6_START,PT:=T#2S);
		
//START FOR 1ST TIME			
			IF LOADER_RS4_VAR.I_LOADER_RS4_READY AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ERROR AND NOT LOADER_RS4_VAR.I_LOADER_RS4_RUNNING  AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_HOME AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE AND INDEXING_2_VAR.I_INDEXING_2_HOME THEN 
				TMR7(IN:=LOADER_RS4_VAR.I_LOADER_RS4_READY,PT:=T#1S);
				START_ROBOT(IN:=TMR7.Q,PT:=T#3S);
				LOADER_RS4_VAR.O_LOADER_RS4_START :=TMR7.Q;
				LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=FALSE;
				RESET_POSITION:=TRUE;
			ELSE
				TMR7(IN:=FALSE);
			END_IF
			IF LOADER_RS4_VAR.I_LOADER_RS4_RUNNING  THEN
				LOADER_RS4_VAR.O_LOADER_RS4_START :=FALSE ;
			END_IF
//STOP
			IF LOADER_RS4_VAR.I_LOADER_RS4_END_FUKUDA OR( NOT LOADER_RS4_VAR.I_LOADER_RS4_READY AND NOT LOADER_RS4_VAR.I_LOADER_RS4_RUNNING) THEN
				TMR8(IN:=FALSE);
				TMR9(IN:=FALSE);
				LOADER_RS4_VAR.O_LOADER_RS4_STOP :=TRUE;
				LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=FALSE;
				LOADER_RS4_VAR.O_LOADER_RS4_START :=FALSE ;
			END_IF
			
			TMR2(IN:=LOADER_RS4_VAR.O_LOADER_RS4_STOP,PT:=T#1S);
			IF TMR2.Q THEN
				LOADER_RS4_VAR.I_LOADER_RS4_HANG:=FALSE;
				LOADER_RS4_VAR.O_LOADER_RS4_STOP:=FALSE;
				TMR2(IN:=FALSE);
			END_IF	
			
//CONTINUE
		//GO_ROBOT:=LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND INPUT_G6_VAR.I_G6_READY_PLACING AND INDEXING_2_VAR.O_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE;
			IF LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND INPUT_G6_VAR.I_G6_READY_PLACING  AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE THEN
				GO_ROBOT:=TRUE;
			END_IF
			IF LOADER_RS4_VAR.I_LOADER_RS4_START_PLACING THEN
				GO_ROBOT:=FALSE;
			END_IF		
			IF LOADER_RS4_VAR.I_LOADER_RS4_RUNNING AND GO_ROBOT AND NOT LOADER_RS4_VAR.I_LOADER_RS4_READY AND INDEXING_2_VAR.I_INDEXING_2_HOME AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE THEN
				TMR3(IN:=TRUE,PT:=T#0.5S); 
				POSITION_CHANGED :=FALSE;
			ELSE
				TMR3(IN:=FALSE);
				INDEXING_1_VAR.O_ROTATION_START:=FALSE;	
			END_IF
	
			IF TMR3.Q  AND NOT LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INPUT_VAR.STRAIGHTEN_DONE AND INDEXING_2_VAR.I_INDEXING_2_HOME AND INDEXING_2_VAR.O_ROTATION_DONE  THEN
				IF LOADER_RS4_VAR.POSITION_TOOL_4 <=68  THEN
					POSITION_CHANGED :=TRUE;
				ELSE
					POSITION_CHANGED :=FALSE;
				END_IF	
			END_IF	

			//IF  (TMR3.Q OR LOADER_RS4_VAR.I_LOADER_RS4_READY_PLACING) AND NOT LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER AND NOT LOADER_RS4_VAR.I_LOADER_RS4_READY AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE THEN
			IF  TMR3.Q  AND NOT LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER AND NOT LOADER_RS4_VAR.I_LOADER_RS4_READY AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE THEN
				LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE:=TRUE; 
				LOADER_RS4_VAR.O_LOADER_RS4_START :=FALSE;
			END_IF
			TMR4(IN:=LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE,PT:=T#1S);
			IF TMR4.Q THEN
				LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE:=FALSE; 
				TMR4(IN:=FALSE);
			END_IF

	
(*//END CARRIER		
		IF LOADER_RS4_VAR.POSITION_TOOL_4 >=68 AND LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP THEN
			ROT_START(CLK:=TRUE);
			INDEXING_2_VAR.O_ROTATION_START:=ROT_START.Q;
			//LOADER_RS4_VAR.O_LOADER_RS4_STOP :=ROT_START.Q;
			 RESET_POSITION:=LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER;
			LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER:=TRUE;
			ELSE
			ROT_START(CLK:=FALSE);
		END_IF

			IF LOADER_RS4_VAR.I_LOADER_RS4_START_TAKEUP THEN  
				IF CNT_PLACING.CV >=1 THEN
					CNT_INC(CU:=LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP,RESET:= LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER,PV:=17);
//INPUT TOOL POSITION
					LOADER_RS4_VAR.POSITION_TOOL_1:=(WORD_TO_BYTE(CNT_PLACING.CV))+1 ;//CNT_PLACING
					LOADER_RS4_VAR.POSITION_TOOL_2:=(WORD_TO_BYTE(CNT_PLACING.CV))+2 ;
					LOADER_RS4_VAR.POSITION_TOOL_3:=(WORD_TO_BYTE(CNT_PLACING.CV))+3 ;
					LOADER_RS4_VAR.POSITION_TOOL_4:=(WORD_TO_BYTE(CNT_PLACING.CV))+4 ;
				END_IF	
			END_IF	
*)
		//IF LOADER_RS4_VAR.POSITION_TOOL_1 = LOADER_RS4_VAR.FINISH_POSITION_TOOL THEN
	
		(*IF RESET_POSITION THEN
			RES_POS(IN:=RESET_POSITION,PT:=T#0.5S);
			LOADER_RS4_VAR.POSITION_TOOL_1:=1;
			LOADER_RS4_VAR.POSITION_TOOL_2:=2;
			LOADER_RS4_VAR.POSITION_TOOL_3:=3;
			LOADER_RS4_VAR.POSITION_TOOL_4:=4;
			IF RES_POS.Q THEN
				RESET_POSITION:=FALSE;
				RES_POS(IN:=FALSE);			
			END_IF
		END_IF*)
	(*		
//START ROTATE INDEXING 2
		IF NOT SORTER_RS4_VAR.I_SORTER_RS4_ENABLE THEN
			SORTER_RS4_VAR.O_SORTER_RS4_PAUSE:=TRUE;
			//INDEXING_2_VAR.O_ROTATION_START:=TRUE;//.0_LOADER_RS4_END_CARRIER;
			CASE (CNT_PLACING.CV - 64)OF
			1:
				LOADER_RS4_VAR.POSITION_TOOL_1 :=0;
					LOADER_RS4_VAR.POSITION_TOOL_2 :=0;
					LOADER_RS4_VAR.POSITION_TOOL_3 :=0;
					LOADER_RS4_VAR.POSITION_TOOL_4 :=1;	
			2:
				LOADER_RS4_VAR.POSITION_TOOL_1 :=0;
					LOADER_RS4_VAR.POSITION_TOOL_2 :=0;
					LOADER_RS4_VAR.POSITION_TOOL_3 :=1;
					LOADER_RS4_VAR.POSITION_TOOL_4 :=2;	
			3:
				LOADER_RS4_VAR.POSITION_TOOL_1 :=0;
					LOADER_RS4_VAR.POSITION_TOOL_2 :=1;
					LOADER_RS4_VAR.POSITION_TOOL_3 :=2;
					LOADER_RS4_VAR.POSITION_TOOL_4 :=3;
		END_CASE
		END_IF
*)		
//ACTIVATE SORTER ROBOT RS4			
			CNT_CYCLE(CU:=INDEXING_2_VAR.O_ROTATION_DONE,RESET:=SORTER_RS4_VAR.I_SORTER_RS4_DISABLE,PV:=100);
			IF CNT_CYCLE.CV >=2 THEN
				IF INDEXING_2_VAR.O_ROTATION_DONE THEN
				//SORTER_RS4_VAR.I_SORTER_RS4_ENABLE:=TRUE;
				END_IF
			END_IF
//START ROTATE INDEXING 1		
			IF LOADER_RS4_VAR.I_LOADER_RS4_START_PLACING AND  (INPUT_G6_VAR.IX_G6_GRIPPER_EXT_2 AND INPUT_G6_VAR.I_G6_START_TAKEUP ) AND INDEXING_1_VAR.I_PRESS_STOPPER_UP THEN
				START_ROTATE(CLK:=TRUE);
				ELSE
			START_ROTATE(CLK:=FALSE);
			END_IF
			INDEXING_1_VAR.O_ROTATION_START:=START_ROTATE.Q;
			TMR4(IN:=INDEXING_1_VAR.O_ROTATION_START,PT:=T#0.5S);
			IF TMR4.Q THEN
				INDEXING_1_VAR.O_ROTATION_START:=FALSE;
				TMR4(IN:=FALSE);
			END_IF
//START ROTATE INDEXING 2
			IF LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER THEN
				LOADER_RS4_VAR.READY_INDEXING :=TRUE;	
			END_IF
		(*
		IF NOT CNT_CYCLE.Q AND LOADER_RS4_VAR.I_LOADER_RS4_END_CYCLE THEN
			START_ROTATE(CLK:=TRUE);
			INDEXING_2_VAR.O_ROTATION_START:= START_ROTATE.Q;	
			ELSE
			START_ROTATE(CLK:=FALSE);
		END_IF
					SORTER_RS4_VAR.I_SORTER_RS4_ENABLE:=TRUE;
		*)
		
		IF LOADER_RS4_VAR.I_LOADER_RS4_READY_PLACING OR LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP OR INPUT_G6_VAR.I_G6_READY_PLACING OR INPUT_G6_VAR.I_G6_READY_TAKEUP THEN
//		TMR_ERROR(IN:=TRUE,PT:=T#45S);
			IF TMR_ERROR.Q THEN
				//LOADER_RS4_VAR.O_LOADER_RS4_PAUSE:=TRUE;
				//INPUT_G6_VAR.O_G6_PAUSE:=TRUE;
			END_IF
		ELSE
			TMR_ERROR(IN:=FALSE);
		END_IF
//COUNTING	
		IF LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1  THEN
 			GRP1(IN:=TRUE,PT:=T#0.1S);
		ELSE
			GRP1(IN:=FALSE);	
		END_IF
		IF LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2  THEN
 			GRP2(IN:=TRUE,PT:=T#0.1S); 
		ELSE
			GRP2(IN:=FALSE);	
		END_IF
		IF LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3  THEN
 			GRP3(IN:=TRUE,PT:=T#0.1S);
		ELSE
			GRP3(IN:=FALSE);	
		END_IF
		IF LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4  THEN
 			GRP4(IN:=TRUE,PT:=T#0.1S);
		ELSE
			GRP4(IN:=FALSE);	
		END_IF
//	IF LOADER_RS4_VAR.I_LOADER_RS4_START_PLACING THEN
		CNT_PLACING.CU:=(GRP1.Q OR GRP2.Q OR GRP3.Q OR GRP4.Q); 
//	
		CNT_PLACING(RESET:=CNT_PLACING.q,PV:=64);
	END_IF
END_IF

ELSE 
	LOADER_RS4_VAR.O_LOADER_RS4_STOP:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON:=FALSE;
	
	//LOADER_RS4_VAR.O_LOADER_RS4_RESET:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_START:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE:=FALSE;
	IF LOADER_RS4_VAR.I_LOADER_RS4_READY THEN
		LOADER_RS4_VAR.O_LOADER_RS4_SETMOTOROFF:=TRUE;		
	END_IF
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_1:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_1:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_2:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_2:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_3:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_3:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_4:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_4:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_1:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_2:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_3:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3:=TRUE;
	
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_4:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4:=TRUE;
END_IF


 ]]></ST>
    </Implementation>
    <LineIds Name="LOADER_RS4">
      <LineId Id="1038" Count="0" />
      <LineId Id="1368" Count="2" />
      <LineId Id="1372" Count="9" />
      <LineId Id="1371" Count="0" />
      <LineId Id="1742" Count="2" />
      <LineId Id="1751" Count="8" />
      <LineId Id="1745" Count="0" />
      <LineId Id="1039" Count="0" />
      <LineId Id="322" Count="1" />
      <LineId Id="326" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="327" Count="1" />
      <LineId Id="1057" Count="0" />
      <LineId Id="1045" Count="2" />
      <LineId Id="324" Count="0" />
      <LineId Id="329" Count="6" />
      <LineId Id="1048" Count="2" />
      <LineId Id="336" Count="7" />
      <LineId Id="1051" Count="2" />
      <LineId Id="344" Count="7" />
      <LineId Id="1054" Count="2" />
      <LineId Id="352" Count="3" />
      <LineId Id="357" Count="3" />
      <LineId Id="356" Count="0" />
      <LineId Id="361" Count="10" />
      <LineId Id="373" Count="6" />
      <LineId Id="381" Count="6" />
      <LineId Id="1713" Count="0" />
      <LineId Id="1712" Count="0" />
      <LineId Id="1715" Count="0" />
      <LineId Id="1717" Count="3" />
      <LineId Id="1716" Count="0" />
      <LineId Id="392" Count="0" />
      <LineId Id="1702" Count="0" />
      <LineId Id="1552" Count="2" />
      <LineId Id="1556" Count="0" />
      <LineId Id="1703" Count="0" />
      <LineId Id="1705" Count="0" />
      <LineId Id="1721" Count="0" />
      <LineId Id="1731" Count="3" />
      <LineId Id="1723" Count="0" />
      <LineId Id="1735" Count="6" />
      <LineId Id="1802" Count="0" />
      <LineId Id="732" Count="0" />
      <LineId Id="1565" Count="0" />
      <LineId Id="1567" Count="1" />
      <LineId Id="1566" Count="0" />
      <LineId Id="1037" Count="0" />
      <LineId Id="1558" Count="0" />
      <LineId Id="1557" Count="0" />
      <LineId Id="733" Count="0" />
      <LineId Id="1258" Count="0" />
      <LineId Id="1561" Count="0" />
      <LineId Id="1559" Count="1" />
      <LineId Id="501" Count="0" />
      <LineId Id="1320" Count="0" />
      <LineId Id="1322" Count="0" />
      <LineId Id="1257" Count="0" />
      <LineId Id="1271" Count="1" />
      <LineId Id="1261" Count="0" />
      <LineId Id="1569" Count="1" />
      <LineId Id="1572" Count="0" />
      <LineId Id="1262" Count="0" />
      <LineId Id="1415" Count="0" />
      <LineId Id="1263" Count="1" />
      <LineId Id="1267" Count="0" />
      <LineId Id="1315" Count="0" />
      <LineId Id="1319" Count="0" />
      <LineId Id="1316" Count="0" />
      <LineId Id="1270" Count="0" />
      <LineId Id="402" Count="2" />
      <LineId Id="412" Count="0" />
      <LineId Id="548" Count="0" />
      <LineId Id="522" Count="0" />
      <LineId Id="419" Count="1" />
      <LineId Id="515" Count="0" />
      <LineId Id="488" Count="0" />
      <LineId Id="1273" Count="0" />
      <LineId Id="490" Count="0" />
      <LineId Id="421" Count="1" />
      <LineId Id="500" Count="0" />
      <LineId Id="517" Count="2" />
      <LineId Id="424" Count="0" />
      <LineId Id="428" Count="3" />
      <LineId Id="1449" Count="0" />
      <LineId Id="1483" Count="0" />
      <LineId Id="494" Count="0" />
      <LineId Id="1484" Count="0" />
      <LineId Id="433" Count="0" />
      <LineId Id="524" Count="4" />
      <LineId Id="530" Count="0" />
      <LineId Id="529" Count="0" />
      <LineId Id="546" Count="0" />
      <LineId Id="868" Count="2" />
      <LineId Id="1094" Count="0" />
      <LineId Id="1313" Count="1" />
      <LineId Id="434" Count="1" />
      <LineId Id="455" Count="0" />
      <LineId Id="438" Count="5" />
      <LineId Id="598" Count="0" />
      <LineId Id="653" Count="0" />
      <LineId Id="666" Count="0" />
      <LineId Id="668" Count="0" />
      <LineId Id="657" Count="0" />
      <LineId Id="720" Count="2" />
      <LineId Id="1091" Count="0" />
      <LineId Id="1661" Count="0" />
      <LineId Id="1274" Count="0" />
      <LineId Id="724" Count="0" />
      <LineId Id="726" Count="0" />
      <LineId Id="1498" Count="0" />
      <LineId Id="1501" Count="0" />
      <LineId Id="1503" Count="0" />
      <LineId Id="1502" Count="0" />
      <LineId Id="1613" Count="0" />
      <LineId Id="1500" Count="0" />
      <LineId Id="669" Count="1" />
      <LineId Id="694" Count="1" />
      <LineId Id="704" Count="1" />
      <LineId Id="728" Count="1" />
      <LineId Id="671" Count="0" />
      <LineId Id="692" Count="0" />
      <LineId Id="647" Count="0" />
      <LineId Id="1034" Count="0" />
      <LineId Id="1090" Count="0" />
      <LineId Id="661" Count="0" />
      <LineId Id="1040" Count="0" />
      <LineId Id="663" Count="0" />
      <LineId Id="1103" Count="2" />
      <LineId Id="1153" Count="0" />
      <LineId Id="1041" Count="1" />
      <LineId Id="1092" Count="0" />
      <LineId Id="1135" Count="0" />
      <LineId Id="706" Count="0" />
      <LineId Id="715" Count="3" />
      <LineId Id="708" Count="1" />
      <LineId Id="719" Count="0" />
      <LineId Id="710" Count="0" />
      <LineId Id="699" Count="0" />
      <LineId Id="766" Count="0" />
      <LineId Id="1093" Count="0" />
      <LineId Id="1036" Count="0" />
      <LineId Id="1308" Count="3" />
      <LineId Id="1191" Count="15" />
      <LineId Id="811" Count="0" />
      <LineId Id="1312" Count="0" />
      <LineId Id="807" Count="1" />
      <LineId Id="769" Count="0" />
      <LineId Id="839" Count="0" />
      <LineId Id="813" Count="1" />
      <LineId Id="809" Count="0" />
      <LineId Id="864" Count="2" />
      <LineId Id="1511" Count="1" />
      <LineId Id="1509" Count="1" />
      <LineId Id="1504" Count="2" />
      <LineId Id="1508" Count="0" />
      <LineId Id="1507" Count="0" />
      <LineId Id="1616" Count="0" />
      <LineId Id="1620" Count="0" />
      <LineId Id="1618" Count="1" />
      <LineId Id="872" Count="0" />
      <LineId Id="772" Count="4" />
      <LineId Id="780" Count="0" />
      <LineId Id="806" Count="0" />
      <LineId Id="698" Count="0" />
      <LineId Id="448" Count="0" />
      <LineId Id="1095" Count="1" />
      <LineId Id="1106" Count="1" />
      <LineId Id="1109" Count="0" />
      <LineId Id="1108" Count="0" />
      <LineId Id="1110" Count="1" />
      <LineId Id="1097" Count="0" />
      <LineId Id="899" Count="1" />
      <LineId Id="936" Count="1" />
      <LineId Id="939" Count="6" />
      <LineId Id="947" Count="4" />
      <LineId Id="953" Count="4" />
      <LineId Id="963" Count="2" />
      <LineId Id="961" Count="0" />
      <LineId Id="1318" Count="0" />
      <LineId Id="907" Count="0" />
      <LineId Id="738" Count="0" />
      <LineId Id="740" Count="2" />
      <LineId Id="1252" Count="3" />
      <LineId Id="736" Count="0" />
      <LineId Id="1562" Count="1" />
      <LineId Id="1241" Count="10" />
      <LineId Id="1356" Count="11" />
      <LineId Id="449" Count="0" />
      <LineId Id="735" Count="0" />
      <LineId Id="999" Count="0" />
      <LineId Id="1002" Count="0" />
      <LineId Id="781" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>